:arrow_up: Java 11 upgrade